fix z-index header

--- a/m1/w2/d2/Homework w2d2/start/assets/css/stile.css
+++ b/m1/w2/d2/Homework w2d2/start/assets/css/stile.css
@@ -103,6 +103,7 @@ header {
     /* --HW-- header sticky */
     position: sticky;
     top: 5px;
+    z-index: 5;
     
 }
 
